# DataGrimorium

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pull_request_workflow.yml
configuration/: config.toml  datagrimorium_settings.toml
data/test/: test_create_table_query.sql
data/test/bigquery_connector/: test_create_table_query.sql
data/test/postgresql_connector/: test_create_query.sql  test_create_table_query.sql  test_insert_query.sql  test_select_query.sql  test_update_query.sql
scripts/: ruff_lint.sh
src/data_grimorium/bigquery_connector/: bigquery_connector.py  bigquery_types.py
src/data_grimorium/data_preparation/: data_preparation_utils.py
src/data_grimorium/general_utils/: general_utils.py
src/data_grimorium/postgresql_connector/: postgresql_connector.py  postgresql_types.py
src/general_utils/: general_utils.py
test/bigquery_connector/: test_bigquery_connector.py
test/fixtures/: bigquery_fixtures.py
test/general_utils/: test_general_utils.py
tests/: conftest.py
tests/bigquery_connector/: test_bigquery_connector.py
tests/data_preparation/: test_data_preparation.py
tests/fixtures/: bigquery_fixtures.py  data_preparation_utils_fixtures.py  postgresql_fixtures.py
tests/general_utils/: test_general_utils.py
tests/postgresql_connector/: test_postgresql_connector.py
