[project]
name = "datagrimorium"
version = "0.1.0"
description = "Data Grimorium is a collection of utilities for Data Scientists and Machine Learning Engineers, designed to streamline workflows and accelerate day-to-day coding tasks."
authors = [
  {name = "Simone Porreca", email = "porrecasimone@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
]
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
keywords = ["Machine Learning", "ML", "Python", "Data Science", "DS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Documentation = ""
Repository = "https://github.com/Volscente/DataGrimorium"
Backlog = "https://github.com/users/Volscente/projects/15"
Changelog = "https://github.com/Volscente/DruidicGroveAI/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.13",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlfluff>=3.4.0",
]

[tool.pytest.ini_options]

# Filter deprecation warning from google-cloud-bigquery
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore:BigQuery Storage module not found, fetch data with the REST endpoint instead:UserWarning"
]
# Set the PYTHONPATH
pythonpath = [
  "src"
]
# Read from the .env file
env_files = [".env"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]  # E=pycodestyle, F=pyflakes
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"